// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visualizations -> Chart -> Editor -> Data Labels Settings Changes data labels format 1`] = `
{
  "textFormat": "{{ @@x }} :: {{ @@y }} / {{ @@yPercent }}",
}
`;

exports[`Visualizations -> Chart -> Editor -> Data Labels Settings Changes date/time format 1`] = `
{
  "dateTimeFormat": "YYYY MMM DD",
}
`;

exports[`Visualizations -> Chart -> Editor -> Data Labels Settings Changes number format 1`] = `
{
  "numberFormat": {
    "currency": "USD",
    "decimals": 4,
    "grouping": false,
    "hideZeroFraction": true,
    "minDecimals": 4,
    "prefix": "",
    "style": "number",
    "suffix": " req/s",
  },
}
`;

exports[`Visualizations -> Chart -> Editor -> Data Labels Settings Changes percent values format 1`] = `
{
  "percentFormat": {
    "currency": "USD",
    "decimals": 1,
    "grouping": false,
    "hideZeroFraction": true,
    "minDecimals": 2,
    "prefix": "",
    "style": "number",
    "suffix": "%",
  },
}
`;

exports[`Visualizations -> Chart -> Editor -> Data Labels Settings Sets Show Data Labels option 1`] = `
{
  "showDataLabels": true,
}
`;
